PriorityQueue bug fixed, minor bugs fixed, UI improved